<resources>
    <string name="app_name">Movie Catalogue</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="film_name" translatable="false">Film Name</string>
    <string name="image_photo">Image Photo</string>
    <string name="tab_movies">MOVIES</string>
    <string name="tab_tvshows">TV SHOWS</string>
    <string name="tab_favorite">FAVORITE</string>
    <string name="settings">Settings</string>
    <string name="detail_name" translatable="false">Detail Name</string>
    <string name="detail_overview" translatable="false">Detail Overview</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="detail">DETAIL</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

</resources>
