<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_gravity="center"
    android:id="@+id/cvItem"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:padding="8dp">

        <ImageView
            android:id="@+id/favorite_photo"
            android:contentDescription="@string/image_photo"
            android:layout_width="150dp"
            android:layout_height="220dp"
            android:scaleType="fitXY" />
        <TextView
            android:id="@+id/favorite_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_toEndOf="@id/favorite_photo"
            android:text="@string/film_name"
            android:textSize="18sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/favorite_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/favorite_name"
            android:layout_marginStart="26dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/favorite_photo"
            android:ellipsize="end"
            android:maxLines="3"
            android:text="@string/detail_overview" />
        <Button
            android:id="@+id/btnDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/favorite_overview"
            android:layout_marginStart="26dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/favorite_photo"
            android:ellipsize="end"
            android:text="@string/detail" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>